# kuma-lab

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  README.md
.github/workflows/: bridge-ci.yml  bridge-release.yml
ai-sing/: .gitignore  Makefile  README.md  speak.py
ai-sing/cli/: smoke_speak.sh
ai-sing/experiments/: compose_face.py
ai-sing/scripts/: generate_seaman.py  speak.py
ai-sing/seaman/: Package.swift  VERIFICATION.md  dmg_background.py  dmg_settings.py  make_dmg.sh
ai-sing/seaman/Sources/Seaman/: Info.plist
ai-sing/seaman/Tests/SeamanTests/: PetAudioPlayerTests.swift  PetBrainTests.swift  Placeholder.swift  SetupCheckerTests.swift  SongEngineTests.swift  SpeechEngineTests.swift
ai-sing/seaman/packaging/: make_dmg.sh
backend/: fly.toml
backend/src/SinSublimation.Api/: Config.fs  Routes.fs
backend/src/SinSublimation.Api/Auth/: Handlers.fs
backend/src/SinSublimation.Api/Purification/: AnthropicClient.fs  Handlers.fs  Parser.fs  Prompt.fs
backend/tests/SinSublimation.Tests/: ParserTests.fs  SinSublimation.Tests.fsproj
cadenza-bridge/: Cargo.toml  README.md
cadenza-bridge/crates/bridge-audio/: Cargo.toml
cadenza-bridge/crates/bridge-audio/src/: lib.rs
cadenza-bridge/crates/bridge-clap/: Cargo.toml  README.md
cadenza-bridge/crates/bridge-clap/src/: factory.rs  lib.rs  plugin.rs  scanner.rs
cadenza-bridge/crates/bridge-core/: Cargo.toml
cadenza-bridge/crates/bridge-core/src/: autostart.rs  bridge_state.rs  entitlement.rs  handlers.rs  lib.rs  session.rs  update_poll.rs  ws_server.rs
cadenza-bridge/crates/bridge-plugin-host/: Cargo.toml
cadenza-bridge/crates/bridge-plugin-host/src/: automation.rs  clip.rs  effects.rs  graph.rs  hash.rs  instruments.rs  lib.rs  midi.rs  node.rs  patch.rs  render.rs  transport.rs  window.rs
cadenza-bridge/crates/bridge-protocol/: Cargo.toml
cadenza-bridge/crates/bridge-protocol/src/: lib.rs
cadenza-bridge/crates/bridge-ui-tray/: Cargo.toml
cadenza-bridge/crates/bridge-ui-tray/src/: lib.rs
cadenza-bridge/crates/bridge-updater/: Cargo.toml
cadenza-bridge/crates/bridge-updater/src/: lib.rs
cadenza-bridge/crates/bridge-vst3/: Cargo.toml  README.md  build.rs
cadenza-bridge/crates/bridge-vst3/cpp/: README.md  vst3_shim.cpp  vst3_shim.h
cadenza-bridge/crates/bridge-vst3/src/: effect.rs  factory.rs  ffi.rs  instrument.rs  lib.rs  scanner.rs  stub.rs
cadenza-bridge/packaging/: README.md
cadenza-bridge/packaging/mac/: Info.plist  build.sh  entitlements.plist  notarize.sh
cadenza-bridge/packaging/win/: build.ps1  installer.wxs
cadenza-bridge/scripts/: run-full-stack.sh
code-progression-battle/: DESIGN.md  cloudbuild.yaml  deploy.sh
code-progression-battle/backend/: ChordBattle.sln  Dockerfile
code-progression-battle/backend/src/ChordBattle.Api/: ChordBattle.Api.fsproj  Config.fs  Program.fs
code-progression-battle/frontend/: package-lock.json  package.json  vite.config.ts
code-progression-battle/frontend/src/lib/: api.ts  chord-parser.ts  chord-player.ts  chord-suggest.ts  markdown.ts
code-progression-battle/frontend/src/routes/: +layout.svelte  +page.svelte
code-progression-battle/infra/: main.tf  outputs.tf  variables.tf
code-shinkou/analyzer/: app.py  requirements.txt
code-shinkou/backend/: CodeShinkou.sln
code-shinkou/backend/src/CodeShinkou.Api/: CodeShinkou.Api.fsproj  Config.fs  Program.fs
code-shinkou/frontend/: package-lock.json  package.json  vite.config.ts
code-shinkou/frontend/src/: app.d.ts  app.html
code-shinkou/frontend/src/lib/: api.ts
code-shinkou/frontend/src/routes/: +page.svelte
doubutsu-quiz/: .gcloudignore  cloudbuild.yaml  deploy.sh
doubutsu-quiz/backend/: Dockerfile
doubutsu-quiz/backend/src/DoubutsuQuiz.Api/: Config.fs  DoubutsuQuiz.Api.fsproj  Program.fs
doubutsu-quiz/frontend/: package-lock.json  package.json  vite.config.ts
doubutsu-quiz/frontend/src/: app.css  app.html  poly-decomp.d.ts
doubutsu-quiz/frontend/src/lib/: api.ts  imageLoader.ts  recognition.ts  speech.ts  towerPhysics.ts  types.ts
doubutsu-quiz/frontend/src/routes/: +layout.svelte  +page.svelte
doubutsu-quiz/infra/: main.tf  outputs.tf
doubutsu-quiz/tools/irasutoya-index/: .gitignore  EHON_LAYOUT_DESIGN.md  MANIFEST.json  README.md  requirements.txt
doubutsu-quiz/tools/irasutoya-index/src/: _ipv4_patch.py  cc_index.py  html_parser.py  main.py  rate_limit.py  warc_fetcher.py
frontend/: package-lock.json
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts
frontend/src/lib/animations/: transitions.ts
frontend/src/lib/components/: CodeRain.svelte  DonePhase.svelte  IdlePhase.svelte  Pentagram.svelte  PurifyingPhase.svelte  ShowingPhase.svelte  SummoningPhase.svelte
frontend/src/lib/state/: machine.svelte.ts  types.ts
frontend/src/routes/: +layout.server.ts  +layout.svelte
tamekoma-night/: AI_RHYTHM_RESEARCH.html  CADENZA_WORKFLOW.html  HANDOVER.md  UX_AUDIT.md  deploy.sh
tamekoma-night/backend/: .gitignore  Dockerfile  TamekomaNight.sln
tamekoma-night/backend/scripts/: verify-bridge-endpoints.fsx  verify-bridge-roundtrip.fsx  verify-stripe-endpoints.fsx
tamekoma-night/backend/src/TamekomaNight.Api/: Config.fs  Program.fs  Shared.fs  TamekomaNight.Api.fsproj
tamekoma-night/docs/: bridge-architecture.md  manual-qa-checklist.md
tamekoma-night/frontend/: .gitignore  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
tamekoma-night/frontend/e2e/: smoke.spec.ts
tamekoma-night/frontend/e2e/fixtures/: full-stack.ts  global-setup.ts  ui-interactions.ts  window-stores.ts
tamekoma-night/frontend/e2e/scenarios/: automation-add-many-points-perf.spec.ts  automation-ai-curve.spec.ts  (+243 more)
tamekoma-night/frontend/src/: app.html
tamekoma-night/frontend/static/: manifest.json
tamekoma-night/infra/: main.tf  outputs.tf
tsumi-no-shouka/: .env.example  deploy.sh
tsumi-no-shouka/backend/: Dockerfile  SinSublimation.sln
tsumi-no-shouka/frontend/: package-lock.json  package.json
tsumi-no-shouka/frontend/src/: app.css  app.html
tsumi-no-shouka/infra/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
(+272 files in other folders)
