[workspace]
resolver = "2"
members = [
    "crates/bridge-protocol",
    "crates/bridge-audio",
    "crates/bridge-ui-tray",
    "crates/bridge-core",
    "bin/cadenza-bridge",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
tray-icon = "0.19"
tao = "0.30"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.dependencies.objc2]
version = "0.5"

[workspace.dependencies.objc2-app-kit]
version = "0.2"
features = ["NSApplication", "NSResponder"]

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
