[package]
name = "bridge-audio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bridge-protocol = { path = "../bridge-protocol" }
bridge-plugin-host = { path = "../bridge-plugin-host" }
cpal = { workspace = true }
rtrb = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
