[package]
name = "bridge-clap"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bridge-protocol = { path = "../bridge-protocol" }
bridge-plugin-host = { path = "../bridge-plugin-host" }
anyhow = { workspace = true }
tracing = { workspace = true }
clap-sys = "0.5"
libloading = "0.9"
