[package]
name = "bridge-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bridge-protocol = { path = "../bridge-protocol" }
bridge-audio = { path = "../bridge-audio" }
bridge-plugin-host = { path = "../bridge-plugin-host" }
bridge-clap = { path = "../bridge-clap" }
bridge-vst3 = { path = "../bridge-vst3" }
bridge-updater = { path = "../bridge-updater" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
ureq = { version = "2.10", default-features = false, features = ["json", "tls"] }
jsonwebtoken = { version = "9", default-features = false }

[dev-dependencies]
tokio = { workspace = true }
