[package]
name = "bridge-plugin-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bridge-protocol = { path = "../bridge-protocol" }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hound = { workspace = true }
blake3 = { workspace = true }
