[package]
name = "bridge-ui-tray"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bridge-core = { path = "../bridge-core" }
tray-icon = { workspace = true }
tao = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { workspace = true }
objc2-app-kit = { workspace = true }
